<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.prueba.preguntas_test"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/idNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/circulo"
            android:textStyle="bold"
            android:textColor="@color/plomo"
            android:textAlignment="center"
            android:textSize="45dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_marginTop="40dp"
                android:padding="12dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"

                android:id="@+id/idPregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregunta"
                android:background="@drawable/fondo_preguntas"
                android:textSize="20dp"
                android:textColor="@color/blanco"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/si"
                    style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:layout_weight="1"
                    android:text="@string/si"
                    android:textColor="@color/primary_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="70dp"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textColor="@color/primary_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <Button android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/btSig"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_secundario"
            android:text="@string/siguiente"
            android:textColor="@color/blanco"
            android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>